objects/CMPL123CME__MedDRA_High_Level_and_Group_Term__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123CME__Backup_JSON__c</fullName>
        <description>This is a backend field for cleanup job</description>
        <inlineHelpText>This is a backend field for cleanup job</inlineHelpText>
        <label>Backup JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Hlgt_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>8-digit code to identify the High Level Group Term</description>
        <inlineHelpText>8-digit code to identify the High Level Group Term</inlineHelpText>
        <label>High Level Group Term Code</label>
        <referenceTo>CMPL123CME__MedDRA_High_Level_Group_Term__c</referenceTo>
        <relationshipLabel>MedDRA High Level  and Group Term</relationshipLabel>
        <relationshipName>MedDRA_High_Level_and_Group_Term</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Transaction_ID__c</fullName>
        <description>Used to store an unique ID</description>
        <label>Transaction ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Active Status of High Level and Group Term</description>
        <inlineHelpText>Active Status of High Level and Group Term</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlt_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>8-digit code to identify the High Level Term</description>
        <inlineHelpText>8-digit code to identify the High Level Term</inlineHelpText>
        <label>High Level Term Code</label>
        <referenceTo>CMPL123CME__MedDRA_High_Level_Term__c</referenceTo>
        <relationshipLabel>MedDRA High Level  and Group Term</relationshipLabel>
        <relationshipName>MedDRA_High_Level_and_Group_Term</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__hlt_hlgt_unique_key__c</fullName>
        <externalId>true</externalId>
        <label>HL and HLGT Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CMPL123CME__meddra_release_key__c</fullName>
        <description>Used to store an release info</description>
        <externalId>true</externalId>
        <label>MedDRA Release Key</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>MedDRA High Level  and Group Term</label>
    <nameField>
        <label>MedDRA High Level  and Group Term Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedDRA High Level  and Group Term</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CMPL123CME__High_Level_Group_Term_Code_is_required</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__Hlgt_code__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__Hlgt_code__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123CME__High_Level_Term_Code_is_required_field</fullName>
        <active>true</active>
        <description>The rule contains a field that is mandatory.</description>
        <errorConditionFormula>ISBLANK(CMPL123CME__hlt_code__c)</errorConditionFormula>
        <errorDisplayField>CMPL123CME__hlt_code__c</errorDisplayField>
        <errorMessage>This field cannot be empty</errorMessage>
    </validationRules>
</CustomObject>